istio/pluralsight/kubernetes-istio-managing-apps/module-03/demos/demo2/productpage-test-to-live.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: bookinfo
  name: bookinfo
spec:
  hosts:
    - bookinfo.local
  gateways:
    - bookinfo-gateway
  http:
  - route:
    - destination:
        host: productpage
        subset: v2
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: bookinfo
  name: bookinfo-test
spec:
  hosts:
    - test.bookinfo.local
  gateways:
    - bookinfo-gateway
  http:
  - route:
    - destination:
        host: productpage
        subset: v1
        port:
          number: 9080
