istio/pluralsight/kubernetes-istio-managing-apps/module-03/demos/demo2/productpage-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bookinfo
  name: productpage-v2
  labels:
    app: productpage
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v2
  template:
    metadata:
      labels:
        app: productpage
        version: v2
    spec:
      serviceAccountName: bookinfo-productpage
      containers:
        - name: productpage
          image: sixeyed/examples-bookinfo-productpage-v2:1.18.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  namespace: bookinfo
  name: productpage
spec:
  host: productpage
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: bookinfo
  name: bookinfo
spec:
  hosts:
    - bookinfo.local
  gateways:
    - bookinfo-gateway
  http:
    - route:
        - destination:
            host: productpage
            subset: v1
            port:
              number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: bookinfo
  name: bookinfo-test
spec:
  hosts:
    - test.bookinfo.local
  gateways:
    - bookinfo-gateway
  http:
    - route:
        - destination:
            host: productpage
            subset: v2
            port:
              number: 9080
